# plug

./: .gitignore  README.md  pyproject.toml  pyproject.toml_  requirements.txt  setup.py  tags  test.py  todos.md
plug/: __init__.py
plug/utils/: command.py
plugin/: __init__.py  base.py  input_text.py  plug.py  plug_qt.py
plugin/app/: __init__.py  display.py  statusbar.py  view.py
plugin/app/app/: base.py
plugin/app/display/: base.py
plugin/app/docks/: __init__.py  dock.py  docks.py
plugin/app/manager/: __init__.py  buffer.py  main.py  mode.py  plugin.py
plugin/app/mode/: __init__.py  base.py
plugin/app/plugin/: __init__.py  base.py
plugin/app/scene/: __init__.py  base.py
plugin/app/statusbar/: __init__.py  base.py
plugin/app/utils/: __init__.py  command.py
plugin/app/view/: base.py
plugin/app/window/: __init__.py  command.py  main.py  stack.py
plugin/base/: __init__.py  base.py  base_app.py  base_widget.py  helper.py
plugin/mode/: __init__.py  generic.py  input.py  mode.py  utils.py
plugin/moder/: __init__.py  base.py  generic.py  helper.py  input.py
plugin/plug/: __init__.py  plug.py
plugin/plug/plug_qt/: __init__.py  plug.py  plug_app.py  plug_widget.py
plugin/plug/qt/: __init__.py  app.py  base.py  plug.py  plug_app.py  plug_widget.py  widget.py
plugin/plug/utils/: __init__.py  key.py  register.py
plugin/qt/: __init__.py  base.py  helper.py  qapp.py  qwidget.py
plugin/utils/: __init__.py  key.py  listener.py  register.py
plugin/widget/: __init__.py
plugin/widget/base/: __init__.py  browser.py  input.py  list.py  message.py  stack.py  tree.py  window.py
plugin/widget/browser/: browser.py  qbrowser.py
plugin/widget/compound/: __init__.py  command_list.py  input_browser.py  input_list.py  input_list_stack.py  input_tree.py
plugin/widget/input/: __init__.py  input.py  input_label.py
plugin/widget/list/: __init__.py  input_list.py  list.py  qlistwidget.py
plugin/widget/message/: __init__.py
plugin/widget/patch/: widgets.py
plugin/widget/rest/: container_.py  display_.py  item_.py  listwidget.py  listwidget_.py  qlistwidget_.py  treeview.py
plugin/widget/stack/: __init__.py  command_stack.py  input_browser_stack.py  input_list_stack.py
plugin/widget/to_remove/: input.py  render.py
plugin/widget/widget_app/: base.py
plugin/widget/window/: __init__.py  central.py  list.py  message.py
plugin/widgets/: __init__.py  list.py  message.py
plugin/widgets/components/: qinput.py  qlistwidget.py  qmainwindow.py
src/: plug.py
src/plug/: __init__.py  actionable.py  plug.py
src/plug/qt/: __init__.py  app.py  base.py  obj.py  plug.py
src/qplug/: __init__.py  app.py  base.py  obj.py
src/utils/: listener_key.py
test/: conftest.py  test_plug_intents.py
tests/: test_install_deps.py  test_zmq.py
tests/test_install_deps/: test_install_deps.py
tests/test_install_deps/data/card/: pyproject.toml  requirements.txt
tests/test_install_deps/data/lura/: pyproject.toml
(+298 files in other folders)
