[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]

name = "plug"
version = "0.0.1"
description = "Plug"
readme = "README.md"
dependencies = [
    "pyyaml==6.0.1",
	"pyzmq==25.0.2", 
	"tomli==2.0.1",
	"gitpython==3.1.32",
  ]

[project.optional-dependencies]

qt=[
	"gizmo==0.0.1",
	"pynput==1.7.6",
	"PyQt5==5.15.9",
	]

[tools.setuptools.package-data]

"*"=["*"]

[tools.setuptools.packages.find]

where=["src"]
