[tool.poetry]
name = "plug"
version = "0.0.1"
description = "Plugin-based application framework"
authors = ["AO <adhambek.otabekov.post@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
tomli = ">=2.0.1"
pyyaml = ">=6.0.1"
pyzmq = ">=25.0.2" 
gitpython = ">=3.1.32"
PyQt6 = { version = ">=6.5.2", optional = true}
pynput = { version = ">=1.7.6", optional = true}
gizmo = { optional =true, git = "https://github.com/aotabekov91/gizmo" }

[tool.poetry.extras]
qt=["gizmo", "PyQt6", "pynput"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
