[tool.poetry]
name = "lura"
version = "0.0.1"
description = "A document viewer"
authors = ["A O <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = ">=5.15.6"
python-poppler-qt5 = ">=21.3.0"
gizmo = {git = "https://github.com/aotabekov91/gizmo", branch='main'}
plug = {git = "https://github.com/aotabekov91/plug", extras=['qt'], branch='main'}

[tool.poetry.scripts]
lura = "lura.main:run"
lurac = "lura.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
